feature: record, fix: erro ao reiniciar

--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./src/styles/reset.css">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="./src/styles/style.css">
   <title>Meu primeiro joguinho :D</title>
 </head>
 
+
 <body>
   <div class='container'>
+    <div class='record'>
+      <img src="./src/images/award.png">
+      <span class='record-number'>0</span>
+    </div>
     <div class='life-points-wrapper'>
       <span class='scoreboard'> 0 </span>
       <div class='life-bar'>
