--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
       <img src="./src/images/award.png">
       <span class='record-number'>0</span>
     </div>
+    <div class='buff-keys'>
+      <div class='q-wrapper key-wrapper'>
+        <span class='blue-buff-amount'>0</span>
+        <img src="./src/images/letter-q-key-on-keyboard.png"  class='key-img'/>
+      </div>
+      <div class='w-wrapper key-wrapper'>
+        <span class='black-buff-amount'>0</span>
+        <img src="./src/images/key-w-of-a-computer-keyboard.png" class='key-img'/>
+      </div>
+      <div class='e-wrapper key-wrapper'>
+        <span class='orange-buff-amount'>0</span>
+        <img src="./src/images/keyboard-key-e.png" class='key-img'/>
+      </div>
+    </div>
     <div class='life-points-wrapper'>
       <span class='scoreboard'> 0 </span>
       <div class='life-bar'>
