--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <ul class='rank'></ul>
     <div class='nick-box'>
       <input name='name' placeholder="Seu nick" class='nick-field'/>
+      <button class='button-play'>Jogar</button>
     </div>
     <div class='container'>
       <div class='record'>
