--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <main class='main'>
     <ul class='rank'></ul>
+    <span class='your-nick'></span>
     <div class='nick-box'>
       <input name='name' placeholder="Seu nick" class='nick-field'/>
       <button class='button-play'>Jogar</button>
